EX-2429: fix cut off letters for news on Freshtab on Windows (#1970)

--- a/modules/fresh-tab-frontend/app/styles/freshtab.scss
+++ b/modules/fresh-tab-frontend/app/styles/freshtab.scss
@@ -18,7 +18,7 @@
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.2em;
+  line-height: 1.2;
 }
 
 a:hover, a:active, a:focus {
@@ -404,7 +404,7 @@ a:hover, a:active, a:focus {
         text-decoration: none;
         max-height: 87px;
         overflow: hidden;
-        line-height: 1.2em;
+        line-height: normal;
       }
 
       .title:hover {
